# Reel-Reader

./: .env.example  .env.template  .gitignore  API_SPEC.md  AUTH_FLOW.md  COMPONENTS.md  DB_SCHEMA.md  FEATURES.md  FEATURES_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS.md  LICENSE  METADATA_API_SETUP.md  METADATA_IMPLEMENTATION_STATUS.md  METADATA_PROVIDERS_SPEC.md  METADATA_SETUP_GUIDE.md  MIDDLEWARE.md  NEW_FEATURES_SUMMARY.md  NOTIFICATIONS_JOBS.md  OPTIONAL_FEATURES.md  PRD.md  QUICK_TEST_GUIDE.md  README.md  ROADMAP.md  ROUTES.md  STATE_MANAGEMENT.md  STYLING_PATTERNS.md  STYLING_SETUP.md  TESTING.md  TEST_GUIDE.md  THEMES.md  TMDB_SETUP.md  TODO.md  UX_FLOW.md  brand-guide.md  index.html  package-lock.json  package.json  playwright.config.ts  style-guide.md  tailwind.config.ts  (+3 more)
.github/workflows/: test.yml
ROADMAP/ISSUES/: 01-external-sources.md  02-metadata-artwork.md  03-offline-downloads.md  04-profiles-security.md  05-queue-playlist-ux.md  06-casting-dlna.md  07-backup-restore.md  08-global-hotkeys.md  09-lyrics-visualizer.md  10-cloud-sync.md  11-video-player.md  12-music-player-enhancements.md  13-notifications-jobs.md  14-watch-party.md
ROADMAP/TOP_10/: 01-external-sources.md  02-metadata-artwork.md  03-offline-downloads.md  04-profiles-security.md  05-queue-playlist-ux.md  06-casting-dlna.md  (+4 more)
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test-results/: .last-run.json
tests/: detail-watch.spec.ts  import-persistence.spec.ts  library-filters.spec.ts  profile-system.spec.ts  smoke.spec.ts
(+168 files in other folders)
