[package]
name = "reel-reader"
version = "0.1.0"
description = "A bold, dark-themed media management application"
authors = ["Reel Reader Team"]
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "dialog-message", "fs-write-file", "dialog-open", "dialog-save", "fs-read-file", "fs-read-dir", "fs-exists"] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }

[features]
# by default Tauri runs in strict mode where all net requests are denied
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
